@@ -12,7 +12,7 @@
     </parent>
     <groupId>net.thucydides</groupId>
     <artifactId>thucydides</artifactId>
-    <version>0.9.244</version>
+    <version>0.9.245-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>thucydides</name>
     <description>An Acceptance Testing framework for web applications
@@ -193,6 +193,7 @@
                                 <exclude>**/*Sample.*</exclude>
                                 <exclude>%regex[.*integration.*]</exclude>
                             </excludes>
+                            <excludedGroups>net.thucydides.core.categories.RealBrowserTests</excludedGroups>
                             <systemPropertyVariables>
                                 <thucydides.logging>QUIET</thucydides.logging>
                             </systemPropertyVariables>
@@ -212,6 +213,7 @@
                                 <exclude>**/Sample*.*</exclude>
                                 <exclude>**/*Sample.*</exclude>
                             </excludes>
+                            <excludedGroups>net.thucydides.core.categories.RealBrowserTests</excludedGroups>
                             <includes>
                                 <include>%regex[.*integration.*Story.*]</include>
                                 <include>%regex[.*integration.*When.*]</include>
@@ -383,7 +385,45 @@
                 <module>thucydides-maven-integration-tests</module>
             </modules>
         </profile>
-
+        <profile>
+            <id>browser-tests</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <version>${surefire.version}</version>
+                        <configuration>
+                            <skip>true</skip>
+                            <argLine>-Xmx512m -XX:MaxPermSize=512m -XX:PermSize=128m</argLine>
+                        </configuration>
+                        <executions>
+                            <execution>
+                                <id>integration-tests</id>
+                                <phase>integration-test</phase>
+                                <goals>
+                                    <goal>test</goal>
+                                </goals>
+                                <configuration>
+                                    <skip>false</skip>
+                                    <excludes>
+                                        <exclude>**/Abstract*.*</exclude>
+                                        <exclude>**/samples/*.*</exclude>
+                                        <exclude>**/Sample*.*</exclude>
+                                        <exclude>**/*Sample.*</exclude>
+                                    </excludes>
+                                    <groups>net.thucydides.core.categories.RealBrowserTests</groups>
+                                    <includes>
+                                        <include>%regex[.*integration.*Story.*]</include>
+                                        <include>%regex[.*integration.*When.*]</include>
+                                    </includes>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
         <profile>
             <id>metrics</id>
             <build>
